--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -37,6 +37,23 @@ jobs:
           name: androidlint-output
           path: 'app/build/reports/'
 
+  detekt:
+    runs-on: ubuntu-latest
+    if: github.event_name  == 'pull_request'
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+      - run: ./gradlew detektMain
+        continue-on-error: true
+      - uses: actions/upload-artifact@v3
+        with:
+          name: detekt-output
+          path: 'app/build/reports/'
+
+
   danger:
     runs-on: ubuntu-latest
     if: github.event_name  == 'pull_request'
@@ -52,6 +69,10 @@ jobs:
       - uses: actions/download-artifact@v3
         with:
           name: androidlint-output
+          path: 'app/build/reports/'
+      - uses: actions/download-artifact@v3
+        with:
+          name: detekt-output
           path: 'app/build/reports/'
       - uses: ruby/setup-ruby@v1
         with:
